# Numerical-Combustion-Class-Codes

./: .gitignore  README.md
final_project/: run_simulation.py
final_project/ODWE/: ODWE.py
final_project/mesh/: grid_gen.py
final_project/nozzle_gemini/: Quasi1DNozzle.py
final_project/nozzle_gpt/: Quasi1DNozzle.py
final_project/odwe_fortran/: CMakeLists.txt  bc.f90  bc_mod.mod  chemistry.f90  chemistry_mod.mod  flux.f90  flux_mod.mod  grid.f90  grid_mod.mod  main.f90  plot_results.py  post.f90  post_mod.mod  run.sh  solver.f90  solver_mod.mod  state.f90  state_mod.mod
final_project/odwe_gpt/: bc.py  flux.py  grid.py  main.py  post.py  solver.py  state.py
final_project/solver/: flow.py  particles.py
final_project/test1 - fail/: run_simulation.py
final_project/test1 - fail/mesh/: grid_gen.py
final_project/test1 - fail/solver/: flow.py  particles.py  source_terms.py
final_project/test1 - fail/utils/: gas_properties.py
final_project/test2/: gemini_ult.py
final_project/test3/: final_project_complete.py  hllc_flux.py  main.py
final_project/utils/: post_processing.py
hw2/: hw2_advectionSolver  hw2_advectionSolver.f90  hw2_plot.ipynb
hw3/: hw3_solveForP2
hw3/RiemannSolvers/: toro_riemann_plot.py
hw3/hw3_1/: hw3_example_5_1  hw3_example_5_1.f90  hw3_solveForP2.f90
hw3/hw3_2/: hw3_2_plot.py  hw3_2_plot_nan.py  hw3_solver  main_fvm_solver.f90  riemann_approx  riemann_approx.f90  roe_solver_module.f90  roe_solver_module.mod
hw4/: dme.yaml  hw4_nasa_cea_plot.ipynb  prob1.py  prob1_300k_output.txt  prob1_400k_output.txt  prob1_500k_output.txt  prob1_H2O2_Tad_table.csv  prob2_300k_output.txt  prob2_400k_output.txt  prob2_500k_output.txt  prob2_H2air_frozen_Tad_table.csv  prob3_300k_output.txt  prob3_600k_output.txt  prob3_CH4air_HP_Tad.csv  prob3_CH4air_TP_H.csv  prob3_CH4air_TP_H_combined.csv  prob3_hp_300k_output.txt  prob3_hp_600k_output.txt  prob3_tp_300_600_output.txt  prob3_tp_300k_omit_h20lcgr.txt  prob3_tp_600k_omit_h20lcgr.txt  prob4_flame_speed.csv  prob5_DME_ignition_delays.csv  problem4.py  problem5.py
hw5/: hw5_solver  main_hw5.f90  model_reactive_flow.f90  model_reactive_flow_mod.mod  plot_hw5.py
hw6/: CMakeLists.txt  main.f90  mod_chem.f90  mod_chem.mod  mod_global.f90  mod_global.mod  mod_linalg.f90  mod_linalg.mod  open_source_scheme.py  plot_results.py  results_scipy.csv  run.sh
nasa_shocktube/: CMakeLists.txt  README.md  constants_mod.f90  constants_mod.mod  flux_mod.f90  flux_mod.mod  input.txt  main.f90  nasa_solver  plot_results.py  reaction_mod.f90  reaction_mod.mod  run.sh  solver_mod.f90  solver_mod.mod  thermo_mod.f90  thermo_mod.mod
